xenomai:Modify the default configuration to disable xenomai
Modify the default configuration to disable xenomai and fix compilation issues.

Signed-off-by: xu chen <xu.chen_3@nxp.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2146,7 +2146,7 @@ menuconfig XENOMAI
 	bool "Xenomai/cobalt"
 	select IPIPE
 	select IPIPE_WANT_APIREV_2
-	default y
+	default n
 	help
 	  Xenomai's Cobalt core is a real-time extension to the Linux
 	  kernel, which exhibits very short interrupt and scheduling
